Fix: Ensure .nojekyll is in output directory and add asset caching headers

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,12 @@ jobs:
         env:
           NODE_ENV: production
 
+      - name: Ensure .nojekyll exists
+        run: |
+          if [ ! -f out/.nojekyll ]; then
+            touch out/.nojekyll
+          fi
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
